--- a/css/hero.css
+++ b/css/hero.css
@@ -22,32 +22,6 @@ h1{
     text-align: center;
 }
 
-/*Animation*/
-/*
-.cursor{
-    border-right: solid 3px #ef7c3f;
-    animation: animated-text 4s steps(21,end) i1s 1 normal both,
-    animated-cursor 600ms steps(21,end) infinite;
-
-    white-space: nowrap;
-    overflow: hidden;
-}
-
-/* text animation */
-/*
-@keyframes animated-text{
-    from{width: 0;}
-    to{width: 472px;}
-}
-
-/*cursor animations */
-/*
-@keyframes animated-cursor{
-    from{border-right-color: #ef7c3f;}
-    to{border-right-color: transparent;}
-}
-*/
-
 /* header styles */
 /* write comment here */
 
@@ -89,12 +63,14 @@ h2{
     font-size: 30px;
     color: black;
     margin: 40px 0 10px;
+    text-align: center;
 }
 
 a{
     color: pink;
-    text-align: left;
+    text-align: center;
 }
+
 a:hover{
     color: white;
     background-color: pink;
@@ -133,18 +109,7 @@ nav{
     position: sticky;
 }
 
-nav.logo{
-    display: block;
-    width: 300px;
-    height: 40px;
-    position: absolute; top: 50%; left: 0;
-    margin-top: -20px;
-    margin-left: 30px;
-    background: url(img/milk-tea.png) no-repeat 0 0;
-    background-size: 100%;
-    overflow: hidden;
-    text-indent: -999px;
-}
+
 
 nav ul{
     padding: 0;
@@ -171,9 +136,47 @@ nav ul li a{
     padding: 30px 10px;
 }
 
+div.scrollmenu {
+    color: #eaa365;
+    text-align: center;
+    font-family: 'Bubblegum Sans', cursive;
+    font-size: 22px;
+    padding: 30px 10px;
+    overflow: auto;
+    white-space: nowrap;
+}
+
+div.scrollmenu a{
+    text-align: center;
+    text-decoration: none;
+    padding: 30px 20px;
+}
+
+div.linked a{
+    text-align: center;
+}
+
+.activeLink{
+    color:#d65d1a;
+  }
+  
+  .inactiveLink{
+    color: #eaa365;  
+  }
+  
+  .activeLink:hover{
+    color:#ff99ac;
+  }
+  
+  .inactiveLink:hover{
+    color: white;  
+  }
+
 .action{
 
 }
 p{
 
 }
+
+/*example from skillshare class about changing color if certain font size?)
