--- a/css/hero.css
+++ b/css/hero.css
@@ -140,7 +140,7 @@ div.scrollmenu {
     color: #eaa365;
     text-align: center;
     font-family: 'Bubblegum Sans', cursive;
-    font-size: 22px;
+    font-size: 25px;
     padding: 30px 10px;
     overflow: auto;
     white-space: nowrap;
@@ -152,12 +152,16 @@ div.scrollmenu a{
     padding: 30px 20px;
 }
 
-div.linked a{
+#centered{
     text-align: center;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 
 .activeLink{
     color:#d65d1a;
+    color:white;
+    background-color: pink;
   }
   
   .inactiveLink{
